# ida-pro-mcp

./: .gitignore  .mcp.json  CLAUDE.md  CONVENTIONS.md  Dockerfile  INSTALL.md  Makefile  QUICKSTART.md  README.md  data.json  endpoint.json  ida-plugin.json  mcp-plugin.py  pyproject.toml  pytest.ini  server.py  smithery.yaml  ssh-bridge.md  ssh-bridge.zh-CN.md  uv-package.sh
.claude-plugin/: plugin.json
.codex-plugin/: mcp.json  plugin.json
.github/: FUNDING.yml
.github/workflows/: coverage-comment.yml  headless-tests.yml  release.yml  (+1 more)
.kimi-plugin/: plugin.json
devdocs/: test-framework.md  test-plan.md  test-progress.md
docs/: advanced_usage.adoc  configuration.adoc  quickstart.adoc
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_34e33d6fd21ad5bd_test_py.html
mcp-server/: jsonrpc.py  jsonrpc_test.py  mcp.py  mcp_example.py
offline_llm/: __init__.py  backend.py  config.example.toml  default_prompt.txt
profiles/: readonly.txt
scripts/: bootstrap.sh  build_pkg.sh  install_ida_plugin.sh  stress_search_cancellation.py
tests/: _mcp_spec_support.py  binary_info.py  conftest.py  test_browser_transport_guards.py  test_call_edges.py  test_call_pairing.py  test_capture_spec.py  test_consent.py  test_dbg_abi.py  test_dbg_classify.py  test_dbg_diff.py  test_docs_integrity.py  test_domain_pure.py  test_errors.py  test_function_entry.py  test_graph.py  test_hierarchy_pure.py  test_idalib_session_manager.py  test_idalib_supervisor.py  test_mcp_spec_http_e2e.py  test_mcp_spec_schema_generation.py  test_mcp_spec_truncation.py  test_multi_instance.py  test_no_protocol_stdout_prints.py  test_output_schema.py  test_plugin.py  test_probe_ring.py  test_probes_extra.py  test_probes_more.py  test_py_gating.py  test_recipes.py  test_safe_eval.py  test_safety_annotations.py  test_search_docs.py  test_server.py  test_server_transport.py  test_tools_catalog.py  test_utils_pattern_filter.py  test_worker_lifecycle.py
(+177 files in other folders)
