[project]
name = "ida-pro-mcp"
version = "2.1.0"
description = "Vibe reversing with IDA Pro"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
authors = [
    { name = "mrexodia" },
    { name = "can1357" },
    { name = "IDA Pro MCP Contributors" },
]
maintainers = [
    { name = "AriusII" },
    { name = "mrexodia" },
    { name = "can1357" },
]
keywords = ["ida", "mcp", "llm", "plugin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "ida-domain>=0.5.0",
    "idapro>=0.0.9",
    "mcp>=1.27.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "jsonschema>=4.0",
    "mcp>=1.0",
    "pytest>=9.0.3",
]

[project.urls]
Repository = "https://github.com/AriusII/ida-pro-mcp"
Issues = "https://github.com/AriusII/ida-pro-mcp/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ida_pro_mcp.ida_mcp" = ["docs/*.md", "docs/_meta.yaml"]

[project.scripts]
ida-pro-mcp = "ida_pro_mcp.server:main"
idalib-mcp = "ida_pro_mcp.idalib_supervisor:main"
ida-mcp-test = "ida_pro_mcp.test:main"
ida-mcp-trace-dump = "ida_pro_mcp.trace_dump:main"

[tool.pyright]
include = ["src/ida_pro_mcp"]

[tool.ruff]
exclude = ["src/ida_pro_mcp/ida_mcp/zeromcp/*.py"]

[tool.coverage.run]
relative_files = true
include = ["src/ida_pro_mcp/*"]
omit = [
    "src/ida_pro_mcp/ida_mcp/tests/*",
    "src/ida_pro_mcp/ida_mcp/zeromcp/*",
]
